After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 741863 - bayer2rgb0: "transform_caps returned caps which are not a real subset of the filter caps" warning
bayer2rgb0: "transform_caps returned caps which are not a real subset of the ...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.4.4
Other Linux
: Normal normal
: 1.4.6
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-12-22 14:32 UTC by Philippe De Muyter
Modified: 2014-12-22 17:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] bayer2rgb: avoid 'are not a real subset' warning. (1003 bytes, patch)
2014-12-22 14:32 UTC, Philippe De Muyter
none Details | Review

Description Philippe De Muyter 2014-12-22 14:32:33 UTC
Created attachment 293183 [details] [review]
[PATCH] bayer2rgb: avoid 'are not a real subset' warning.

When starting the following pipeline :

gst-launch-1.0 -e -f v4l2src num-buffers=1 device=/dev/video1 ! video/x-bayer,framerate=30/1 ! bayer2rgb ! jpegenc ! filesink location=/tmp/xxx.jpg

one gets the following verbose warnings :

0:00:04.335771352 29633  0x1afec90 ERROR          basetransform gstbasetransform.c:534:gst_base_transform_transform_caps:<bayer2rgb0> trans
form_caps returned caps video/x-bayer, format=(string){ bggr, grbg, gbrg, rggb }, width=(int)1280, height=(int)1024, framerate=(fraction)30
/1 which are not a real subset of the filter caps video/x-bayer, format=(string)bggr, width=(int)1280, height=(int)1024, framerate=(fractio
n)30/1

** (gst-launch-1.0:29633): WARNING **: bayer2rgb0: transform_caps returned caps which are not a real subset of the filter caps
0:00:04.336843721 29633  0x1afec90 ERROR          basetransform gstbasetransform.c:534:gst_base_transform_transform_caps:<bayer2rgb0> trans
form_caps returned caps video/x-bayer, format=(string){ bggr, grbg, gbrg, rggb }, width=(int)1280, height=(int)1024, framerate=(fraction)30
/1 which are not a real subset of the filter caps video/x-bayer, framerate=(fraction)30/1, format=(string)bggr, width=(int)1280, height=(in
t)1024

** (gst-launch-1.0:29633): WARNING **: bayer2rgb0: transform_caps returned caps which are not a real subset of the filter caps
0:00:04.337654414 29633  0x1afec90 ERROR          basetransform gstbasetransform.c:534:gst_base_transform_transform_caps:<bayer2rgb0> trans
form_caps returned caps video/x-bayer, format=(string){ bggr, grbg, gbrg, rggb }, width=(int)1280, height=(int)1024, framerate=(fraction)30
/1 which are not a real subset of the filter caps video/x-bayer, format=(string)bggr, width=(int)1280, height=(int)1024, framerate=(fractio
n)30/1

** (gst-launch-1.0:29633): WARNING **: bayer2rgb0: transform_caps returned caps which are not a real subset of the filter caps
Comment 1 Tim-Philipp Müller 2014-12-22 16:47:41 UTC
Thanks for the bug report. Should be fixed in master now:

commit 68d4616ac88eb1af2e238f8b0876725753e8372c
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Mon Dec 22 16:45:05 2014 +0000

    bayer2rgb: take into account filter in transform_caps function
    
    Fixes criticals when filter caps are passed.
    
    Also fix wrong GST_DEBUG_OBJECT use.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=741863
Comment 2 Tim-Philipp Müller 2014-12-22 17:00:02 UTC
Hrm, sorry, I did not see that you attached a patch :/
Comment 3 Tim-Philipp Müller 2014-12-22 17:07:57 UTC
Cherry-picked into 1.4 branch as well.